# Downloader-Server

./: CMakeLists.txt  README.md  client.cpp  curl使用.md  server.cpp
DownloaderCore/: DownloadTask.cpp  DownloadTask.h  Downloader.cpp  Downloader.h
Logger/: LoggerManager.h
ThreadPool/: ThreadPool.cpp  ThreadPool.h
src/: main.cpp
src/Downloader/: Downloader.cpp  Downloader.hpp
src/utils/: logger.cpp  logger.hpp  tbb_manager.cpp  tbb_manager.hpp  timer.cpp  timer.hpp
